Ninja Project first step in progress

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,10 +60,10 @@
       <thead>
         <tr>
           <td>Users/Horses</td>
-          <td>Horse 1</td>
-          <td>Horse 2</td>
-          <td>Horse 3</td>
-          <td>Horse 4</td>
+          <td>Ninja 1</td>
+          <td>Ninja 2</td>
+          <td>Ninja 3</td>
+          <td>Ninja 4</td>
         </tr>
       </thead>
       <tbody id="odds">
