'finding_background_properties'

--- a/static/style.css
+++ b/static/style.css
@@ -111,3 +111,12 @@
   .down2 {
     background-image: url('./img/down2.png');
   }
+
+  .wall{
+    width: 100vw;
+    height: 100vh;
+    background-image: url('/img/background.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
