--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Simple Group Chat on Node.js</title>
+  <title>Ninja$Bet</title>
   <style>
     
   </style>
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <div class="wall">
   <div class="container">
     <div class="backgroundIMG">
       <div id="ninjas">
@@ -42,12 +43,12 @@
           <input type="number" id="bet_amount">
         </div>
         <div class="row">
-          <span>Choose horses</span>
+          <span>Choose Ninja</span>
           <select id="bet_horse">
-            <option value="horse_1">Horse 1</option>
-            <option value="horse_2">Horse 2</option>
-            <option value="horse_3">Horse 3</option>
-            <option value="horse_4">Horse 4</option>
+            <option value="horse_1">Ninja 1</option>
+            <option value="horse_2">Ninja 2</option>
+            <option value="horse_3">Ninja 3</option>
+            <option value="horse_4">Ninja 4</option>
           </select>
           <div class="row">
             <button>Make a bet</button>
